force-app/main/default/objects/LOA__c/LOA__c.object-meta.xml
<CustomObject>
    <label>LOA</label>
    <nameField>
        <label>Search Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LOAs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>