force-app/main/default/objects/LOA__c/fields/Additional_Information_Required_Notes__c.field-meta.xml
<CustomField>
    <fullName>Additional_Information_Required_Notes__c</fullName>
    <inlineHelpText>Planner: Please include notes to inform the specialist about the information needed</inlineHelpText>
    <label>Additional Information Instructions</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>