force-app/main/default/objects/LOA__c/fields/Authority_Type__c.field-meta.xml
<CustomField>
    <fullName>Authority_Type__c</fullName>
    <inlineHelpText>Did you send an LOA or TOS</inlineHelpText>
    <label>Authority Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Letter of Authority (LOA)</fullName>
            </value>
            <value>
                <fullName>Transfer of Servicing (TOS)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>