force-app/main/default/objects/LOA__c/fields/ChatterPostsMigrated__c.field-meta.xml
<CustomField>
    <fullName>ChatterPostsMigrated__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates whether Chatter posts have been migrated from LOA to information request. Added as part of DG2 release.</description>
    <label>Chatter posts migrated</label>
    <type>Checkbox</type>
</CustomField>