force-app/main/default/objects/LOA__c/fields/Checklist_Completed_Specialist__c.field-meta.xml
<CustomField>
    <fullName>Checklist_Completed_Specialist__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Specialist affirmation that this checklist is completed to the best of their ability</inlineHelpText>
    <label>Checklist Completed (Specialist)</label>
    <type>Checkbox</type>
</CustomField>