force-app/main/default/objects/LOA__c/fields/Client_Action_Request__c.field-meta.xml
<CustomField>
    <fullName>Client_Action_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Action Request</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Household_Lookup__c</field>
            <operation>equals</operation>
            <valueField>Client_Action_Required__c.Household__c</valueField>
        </filterItems>
        <filterItems>
            <field>Client_Action_Required__c.Status__c</field>
            <operation>notEqual</operation>
            <value>Complete, Cancelled</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Client_Action_Required__c</referenceTo>
    <relationshipLabel>LOAs</relationshipLabel>
    <relationshipName>LOAs</relationshipName>
    <type>Lookup</type>
</CustomField>