force-app/main/default/objects/LOA__c/fields/Client_Action_Request_is_Null__c.field-meta.xml
<CustomField>
    <fullName>Client_Action_Request_is_Null__c</fullName>
    <formula>ISBLANK(Client_Action_Request__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Action Request is Null</label>
    <type>Checkbox</type>
</CustomField>