force-app/main/default/objects/LOA__c/fields/Client_Action_Required_Override__c.field-meta.xml
<CustomField>
    <fullName>Client_Action_Required_Override__c</fullName>
    <inlineHelpText>Action required from the client used in email description - overwrites value from picklist</inlineHelpText>
    <label>Client Action Required (Instructions)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>