force-app/main/default/objects/LOA__c/fields/Client_Actions_email_description__c.field-meta.xml
<CustomField>
    <fullName>Client_Actions_email_description__c</fullName>
    <formula>Client_Action_Required_Override__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Actions email description</label>
    <type>Text</type>
</CustomField>