force-app/main/default/objects/LOA__c/fields/Complaint_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Reference_Number__c</fullName>
    <label>Complaint Reference Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>