force-app/main/default/objects/LOA__c/fields/Complaint_SLA__c.field-meta.xml
<CustomField>
    <fullName>Complaint_SLA__c</fullName>
    <inlineHelpText>The number of days it will take to hear back or for the complaint to be processed</inlineHelpText>
    <label>Complaint SLA</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>