force-app/main/default/objects/LOA__c/fields/Complaint_Status__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Status__c</fullName>
    <label>Complaint status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Resolved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>