force-app/main/default/objects/LOA__c/fields/Date_additional_information_received__c.field-meta.xml
<CustomField>
    <fullName>Date_additional_information_received__c</fullName>
    <inlineHelpText>Date we received the additional information that was requested following specialist / planner review</inlineHelpText>
    <label>Date Additional Information Received</label>
    <type>Date</type>
</CustomField>