force-app/main/default/objects/LOA__c/fields/Date_LOA_received_from_client__c.field-meta.xml
<CustomField>
    <fullName>Date_LOA_received_from_client__c</fullName>
    <label>Date Received From Client</label>
    <type>Date</type>
</CustomField>