force-app/main/default/objects/LOA__c/fields/Days_Last_Sent_Provider__c.field-meta.xml
<CustomField>
    <fullName>Days_Last_Sent_Provider__c</fullName>
    <formula>CEILING(
( Today() - Date_LOA_sent_to_provider__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Last Sent Provider</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>