force-app/main/default/objects/LOA__c/fields/Days_Provider_First_Responce__c.field-meta.xml
<CustomField>
    <fullName>Days_Provider_First_Responce__c</fullName>
    <formula>CEILING(
( Today() - DateFirstResponseProvider__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Provider First Responce</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>