force-app/main/default/objects/LOA__c/fields/Days_Since_Last_Stage_Change__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Last_Stage_Change__c</fullName>
    <formula>(

( 5 * FLOOR( (  TODAY()    - DATE( 1900, 1, 8) ) / 7) +

MIN(5,

MOD(    TODAY()    - DATE( 1900, 1, 8), 7) +

MIN( 1, 24 / 9 * ( MOD(  TODAY()  - DATEVALUE( &apos;1900-01-08&apos; ), 1 ) ) )

)

)

-

( 5 * FLOOR( ( DATEVALUE(   Last_Stage_Change__c   ) - DATE( 1900, 1, 8) ) / 7) +

MIN( 5,

MOD( DATEVALUE( Last_Stage_Change__c  ) - DATE( 1996, 1, 1), 7 ) +

MIN( 1, 24 / 9 * ( MOD( DATEVALUE(Last_Stage_Change__c) - DATEVALUE( &apos;1900-01-08&apos; ), 1) ) )

)

)

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Last Stage Change</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>