force-app/main/default/objects/LOA__c/fields/Days_since_sent_to_provider__c.field-meta.xml
<CustomField>
    <fullName>Days_since_sent_to_provider__c</fullName>
    <formula>IF( LOA_Complete_Planner_Approved__c = True,


CASE(MOD(  Date_LOA_sent_to_provider__c  - DATE(1985,6,24),7), 

0 , CASE( MOD(  LOA_Completed_Date__c  - Date_LOA_sent_to_provider__c ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
1 , CASE( MOD( LOA_Completed_Date__c - Date_LOA_sent_to_provider__c ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
2 , CASE( MOD( LOA_Completed_Date__c - Date_LOA_sent_to_provider__c ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
3 , CASE( MOD( LOA_Completed_Date__c - Date_LOA_sent_to_provider__c ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
4 , CASE( MOD( LOA_Completed_Date__c - Date_LOA_sent_to_provider__c ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
5 , CASE( MOD( LOA_Completed_Date__c - Date_LOA_sent_to_provider__c ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
6 , CASE( MOD( LOA_Completed_Date__c - Date_LOA_sent_to_provider__c ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
999) 
+ 
(FLOOR(( LOA_Completed_Date__c - Date_LOA_sent_to_provider__c )/7)*5)



,





CASE(MOD(  Date_LOA_sent_to_provider__c  - DATE(1985,6,24),7), 

0 , CASE( MOD( TODAY() - Date_LOA_sent_to_provider__c ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
1 , CASE( MOD( TODAY() - Date_LOA_sent_to_provider__c ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
2 , CASE( MOD( TODAY() - Date_LOA_sent_to_provider__c ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
3 , CASE( MOD( TODAY() - Date_LOA_sent_to_provider__c ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
4 , CASE( MOD( TODAY() - Date_LOA_sent_to_provider__c ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
5 , CASE( MOD( TODAY() - Date_LOA_sent_to_provider__c ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
6 , CASE( MOD( TODAY() - Date_LOA_sent_to_provider__c ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
999) 
+ 
(FLOOR(( TODAY() - Date_LOA_sent_to_provider__c )/7)*5)

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Business days</inlineHelpText>
    <label>Days since sent to provider</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>