force-app/main/default/objects/LOA__c/fields/Exclude_from_LOA_Updates__c.field-meta.xml
<CustomField>
    <fullName>Exclude_from_LOA_Updates__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If we do not want this plan to be included in the LOA update email then tick this box.</inlineHelpText>
    <label>Exclude from LOA Update Email</label>
    <type>Checkbox</type>
</CustomField>