force-app/main/default/objects/LOA__c/fields/Exclude_from_Reporting_LOA__c.field-meta.xml
<CustomField>
    <fullName>Exclude_from_Reporting_LOA__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for Pipedrive migration</description>
    <label>Exclude from Reporting LOA</label>
    <type>Checkbox</type>
</CustomField>