force-app/main/default/objects/LOA__c/fields/Financial_Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Financial_Product_Type__c</fullName>
    <label>Financial Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Financial_Products</valueSetName>
    </valueSet>
</CustomField>