force-app/main/default/objects/LOA__c/fields/Format_of_Signed_LOA__c.field-meta.xml
<CustomField>
    <fullName>Format_of_Signed_LOA__c</fullName>
    <inlineHelpText>What is the format of the signed LOA we received from the client?</inlineHelpText>
    <label>Format of Signed LOA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Digital</fullName>
            </value>
            <value>
                <fullName>Physical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>