force-app/main/default/objects/LOA__c/fields/Joint_Owner__c.field-meta.xml
<CustomField>
    <fullName>Joint_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Joint Owner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>LOAs (Joint Owner)</relationshipLabel>
    <relationshipName>LOAs1</relationshipName>
    <type>Lookup</type>
</CustomField>