force-app/main/default/objects/LOA__c/fields/LOA_CETV_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>LOA_CETV_Expiry_Date__c</fullName>
    <label>CETV Expiry Date</label>
    <type>Date</type>
</CustomField>