force-app/main/default/objects/LOA__c/fields/LOA_format_sent_to_client__c.field-meta.xml
<CustomField>
    <fullName>LOA_format_sent_to_client__c</fullName>
    <description>What document format are we sending to the client for a signature? Check provider details to see what formats they accept</description>
    <inlineHelpText>What document format are we sending to the client for a signature? Check provider details to see what formats they accept</inlineHelpText>
    <label>Format Sent to Client</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Digital</fullName>
            </value>
            <value>
                <fullName>Physical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>