force-app/main/default/objects/LOA__c/fields/LOA_Have_we_received_information__c.field-meta.xml
<CustomField>
    <fullName>LOA_Have_we_received_information__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checking this box marks that there is new LOA information that needs to be reviewed by a Specialist. If this is already checked then review task is already open.</inlineHelpText>
    <label>LOA Information to be Reviewed</label>
    <type>Checkbox</type>
</CustomField>