force-app/main/default/objects/LOA__c/fields/LOA_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>LOA_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>LOAs</relationshipLabel>
    <relationshipName>LOAs</relationshipName>
    <type>Lookup</type>
</CustomField>