force-app/main/default/objects/LOA__c/fields/LOA_Policy_Number__c.field-meta.xml
<CustomField>
    <fullName>LOA_Policy_Number__c</fullName>
    <inlineHelpText>AKA Policy Number</inlineHelpText>
    <label>Account Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>