force-app/main/default/objects/LOA__c/fields/LOA_s_within_SLA__c.field-meta.xml
<CustomField>
    <fullName>LOA_s_within_SLA__c</fullName>
    <formula>CEILING( 
(TODAY() -  Date_LOA_received_from_client__c   )/7 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Weeks since recieved from client</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>