force-app/main/default/objects/LOA__c/fields/MainLOAStatus__c.field-meta.xml
<CustomField>
    <fullName>MainLOAStatus__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On Hold</fullName>
                <default>true</default>
                <label>On Hold</label>
            </value>
            <value>
                <fullName>Awaiting Policy Numbers</fullName>
            </value>
            <value>
                <fullName>Awaiting Provider Policy Numbers</fullName>
                <label>Awaiting Provider &amp; Policy Numbers</label>
            </value>
            <value>
                <fullName>Send to Provider</fullName>
                <label>To be sent to provider</label>
            </value>
            <value>
                <fullName>Sent to provider</fullName>
            </value>
            <value>
                <fullName>LOA Rejected Internal</fullName>
                <label>LOA Rejected - Internal</label>
            </value>
            <value>
                <fullName>LOA Rejected Action Required from Client</fullName>
                <label>LOA Rejected - Action Required from Client</label>
            </value>
            <value>
                <fullName>Within SLA</fullName>
            </value>
            <value>
                <fullName>Outside SLA</fullName>
            </value>
            <value>
                <fullName>LOA Received Awaiting Information</fullName>
                <label>LOA Received - Awaiting Information</label>
            </value>
            <value>
                <fullName>LOA Accepted Awaiting Information</fullName>
                <label>LOA Accepted - Awaiting Information</label>
            </value>
            <value>
                <fullName>Information Received</fullName>
            </value>
            <value>
                <fullName>Information rerequested</fullName>
                <label>Information re-requested</label>
            </value>
            <value>
                <fullName>Specialist reviewed</fullName>
            </value>
            <value>
                <fullName>LOA Analysis</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Awaiting confirmation of Signee</fullName>
            </value>
            <value>
                <fullName>Replaced</fullName>
            </value>
            <value>
                <fullName>Sent to Provider - Not Received</fullName>
                <isActive>false</isActive>
                <label>Sent to Provider - Not Received</label>
            </value>
            <value>
                <fullName>Signed</fullName>
                <isActive>false</isActive>
                <label>Signed</label>
            </value>
            <value>
                <fullName>To be sent to client</fullName>
                <isActive>false</isActive>
                <label>To be sent to client</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>