force-app/main/default/objects/LOA__c/fields/New_terms_accepted_by_owners__c.field-meta.xml
<CustomField>
    <fullName>New_terms_accepted_by_owners__c</fullName>
    <description>If unchecked, we do not have permission to sign documents on behalf of clients</description>
    <formula>IF( ISBLANK( LOA_Financial_Account__r.FinServ__JointOwner__c ), 

IF(  LOA_Financial_Account__r.FinServ__PrimaryOwner__r.Permission_to_sign_documents__c   = True, True, False)
, 

IF( LOA_Financial_Account__r.FinServ__PrimaryOwner__r.Permission_to_sign_documents__c  = True,

IF(  LOA_Financial_Account__r.FinServ__JointOwner__r.Permission_to_sign_documents__c    = True, True, False)

, False)

)</formula>
    <label>Permission to sign documents</label>
    <type>Checkbox</type>
</CustomField>