force-app/main/default/objects/LOA__c/fields/OctopusMoneyRecord__c.field-meta.xml
<CustomField>
    <fullName>OctopusMoneyRecord__c</fullName>
    <formula>IF(NOT(ISBLANK( Household_Lookup__r.OctopusMoneyRecord__c)), CASESAFEID(Household_Lookup__c), &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OM Record</label>
    <type>Text</type>
</CustomField>