force-app/main/default/objects/LOA__c/fields/Policy_G_Drive_Folder__c.field-meta.xml
<CustomField>
    <fullName>Policy_G_Drive_Folder__c</fullName>
    <label>Policy Google Drive Folder</label>
    <type>Url</type>
</CustomField>