force-app/main/default/objects/LOA__c/fields/Product_Record_Type_Updated__c.field-meta.xml
<CustomField>
    <fullName>Product_Record_Type_Updated__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This needs to be done on the financial product itself</inlineHelpText>
    <label>Financial Product Record Type Updated</label>
    <type>Checkbox</type>
</CustomField>