force-app/main/default/objects/LOA__c/fields/Provider_Name__c.field-meta.xml
<CustomField>
    <fullName>Provider_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Provider Contact Details</label>
    <referenceTo>Provider_Database__c</referenceTo>
    <relationshipLabel>LOAs</relationshipLabel>
    <relationshipName>LOAs</relationshipName>
    <type>Lookup</type>
</CustomField>