force-app/main/default/objects/LOA__c/fields/RegisteredName__c.field-meta.xml
<CustomField>
    <fullName>RegisteredName__c</fullName>
    <description>Business use: To log a name the policy is held under if it&#39;s different to the name we hold for them. 
Tech use: n/a
Data inputters: Operations
Data Users: Operations</description>
    <inlineHelpText>Add the name this policy is held under if it&#39;s different to their legal name.</inlineHelpText>
    <label>Registered Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>