force-app/main/default/objects/LOA__c/fields/Second_Email_Descriptions__c.field-meta.xml
<CustomField>
    <fullName>Second_Email_Descriptions__c</fullName>
    <formula>CASE(MainLOAStatus__c,
&quot;Outside SLA&quot;,

LOA_Financial_Account__r.Public_Provider_Name__r.Name&amp;  
&quot; said that we were due to receive information by &quot;&amp; TEXT(LOA_Expected_Response_Date__c)&amp;
&quot; however, we have not received this.&quot; &amp; IF(ISBLANK(Date_of_Complaint__c),&quot; We will continue to chase, and if necessary, make a complaint on your behalf.&quot;, &quot; We&#39;ve made a complaint on your behalf on &quot;&amp; TEXT(Date_of_Complaint__c)&amp;
&quot; and hope this will get things moving.&quot;), 

&quot;LOA Received Awaiting Information&quot;,&quot;We requested information on &quot;
+TEXT(Date_LOA_sent_to_provider__c)&amp;&quot;.&quot;&amp;&quot; &quot;
+(LOA_Financial_Account__r.Public_Provider_Name__r.Name)&amp;
&quot; has told us that our request is being processed.&quot;&amp; &quot; We last chased on &quot;
+TEXT(Date_Last_Chased__c)&amp;&quot;.&quot;,
(&quot;&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Second Email Descriptions</label>
    <type>Text</type>
</CustomField>