force-app/main/default/objects/LOA__c/fields/Send_LOA_to_client_task__c.field-meta.xml
<CustomField>
    <fullName>Send_LOA_to_client_task__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send LOA to client task</label>
    <type>Checkbox</type>
</CustomField>