force-app/main/default/objects/LOA__c/fields/Sent_with_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Sent_with_Account_Number__c</fullName>
    <label>Sent with Account Number</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>