force-app/main/default/objects/LOA__c/fields/Signed_by__c.field-meta.xml
<CustomField>
    <fullName>Signed_by__c</fullName>
    <description>Whether we used the clients real signature or Andrew&apos;s</description>
    <label>Signed by</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Annelise</fullName>
            </value>
            <value>
                <fullName>Hasan</fullName>
            </value>
            <value>
                <fullName>Kayalvili</fullName>
            </value>
            <value>
                <fullName>Liberty</fullName>
            </value>
            <value>
                <fullName>Naomi</fullName>
            </value>
            <value>
                <fullName>Narisa</fullName>
            </value>
            <value>
                <fullName>Client</fullName>
                <label>Client - TOB</label>
            </value>
            <value>
                <fullName>Client - By Hand</fullName>
            </value>
            <value>
                <fullName>Alex</fullName>
                <isActive>false</isActive>
                <label>Alex</label>
            </value>
            <value>
                <fullName>Andrew</fullName>
                <isActive>false</isActive>
                <label>Andrew</label>
            </value>
            <value>
                <fullName>Becky</fullName>
                <isActive>false</isActive>
                <label>Becky</label>
            </value>
            <value>
                <fullName>Ben</fullName>
                <isActive>false</isActive>
                <label>Ben</label>
            </value>
            <value>
                <fullName>Elliot</fullName>
                <isActive>false</isActive>
                <label>Elliot</label>
            </value>
            <value>
                <fullName>Hugo</fullName>
                <isActive>false</isActive>
                <label>Hugo</label>
            </value>
            <value>
                <fullName>Jack F</fullName>
                <isActive>false</isActive>
                <label>Jack F</label>
            </value>
            <value>
                <fullName>Matthew</fullName>
                <isActive>false</isActive>
                <label>Matthew</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>