force-app/main/default/objects/LOA__c/fields/Signed_LOA_Link__c.field-meta.xml
<CustomField>
    <fullName>Signed_LOA_Link__c</fullName>
    <label>Signed LOA Link</label>
    <type>Url</type>
</CustomField>