force-app/main/default/objects/LOA__c/fields/Signee__c.field-meta.xml
<CustomField>
    <fullName>Signee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The signee for Junior ISAs and SIPPs</inlineHelpText>
    <label>Signee</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>LOAs (Signee)</relationshipLabel>
    <relationshipName>LOAs2</relationshipName>
    <type>Lookup</type>
</CustomField>