force-app/main/default/objects/LOA__c/fields/Suitability_Builder_Tab_URL__c.field-meta.xml
<CustomField>
    <fullName>Suitability_Builder_Tab_URL__c</fullName>
    <inlineHelpText>Please link the URL to the tab for this specific policy</inlineHelpText>
    <label>Suitability Builder Tab URL</label>
    <type>Url</type>
</CustomField>