force-app/main/default/objects/LOA__c/fields/Update_IO__c.field-meta.xml
<CustomField>
    <fullName>Update_IO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Update IO</label>
    <type>Checkbox</type>
</CustomField>