force-app/main/default/objects/LOA__c/fields/Update_Precise_FP_Old_version__c.field-meta.xml
<CustomField>
    <fullName>Update_Precise_FP_Old_version__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Update Precise FP (Old version)</label>
    <type>Checkbox</type>
</CustomField>