force-app/main/default/objects/LOA__c/recordTypes/Client_Info_Request.recordType-meta.xml
<RecordType>
    <fullName>Client_Info_Request</fullName>
    <active>true</active>
    <label>Client Info Request</label>
</RecordType>