force-app/main/default/objects/LOA__c/recordTypes/Pre_LOA.recordType-meta.xml
<RecordType>
    <fullName>Pre_LOA</fullName>
    <active>true</active>
    <label>LOA</label>
</RecordType>