force-app/main/default/objects/LOA__c/validationRules/Add_a_provider.validationRule-meta.xml
<ValidationRule>
    <fullName>Add_a_provider</fullName>
    <active>false</active>
    <description>Need to add a provider before marking LOA as sent to provider</description>
    <errorConditionFormula>AND(
ISBLANK(Provider_Name__c),
OR(
 ISPICKVAL(MainLOAStatus__c,&quot;Sent to Provider&quot;), 
 ISPICKVAL(MainLOAStatus__c,&quot;Within SLA&quot;), 
 ISPICKVAL(MainLOAStatus__c,&quot;Outside SLA&quot;),
 ISPICKVAL(MainLOAStatus__c,&quot;Specialist Reviewed&quot;)
)
)</errorConditionFormula>
    <errorDisplayField>Provider_Name__c</errorDisplayField>
    <errorMessage>You need to add a Provider</errorMessage>
</ValidationRule>