force-app/main/default/objects/LOA__c/validationRules/Cannot_add_a_future_date_in.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_add_a_future_date_in</fullName>
    <active>true</active>
    <errorConditionFormula>DateFirstResponseProvider__c &gt; TODAY()</errorConditionFormula>
    <errorMessage>Date First Response from Provider cannot be greater than todays date</errorMessage>
</ValidationRule>