force-app/main/default/objects/LOA__c/validationRules/LOA_Builder_URL.validationRule-meta.xml
<ValidationRule>
    <fullName>LOA_Builder_URL</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL( MainLOAStatus__c, &quot;Signed&quot;), 
ISBLANK( LOA_Builder_Tab_URL__c )
)</errorConditionFormula>
    <errorMessage>You need to add the LOA Builder Tab URL before marking the LOA as signed.</errorMessage>
</ValidationRule>