force-app/main/default/objects/LOA__c/validationRules/OW_loa_information_rerequested.validationRule-meta.xml
<ValidationRule>
    <fullName>OW_loa_information_rerequested</fullName>
    <active>true</active>
    <description>Checks to ensure key fields are populated where the status of the LOA is information rerequested.</description>
    <errorConditionFormula>ISPICKVAL( MainLOAStatus__c, &quot;Information rerequested&quot; )

&amp;&amp; 

( ISBLANK( Date_Additional_Information_Requested__c )
||
ISBLANK( LOA_Financial_Account__r.Public_Provider_Name__c )  
||
ISBLANK( Date_Last_Chased__c )
)</errorConditionFormula>
    <errorMessage>Please ensure there is a value for date additional info rerequested, date last chased, and provider.</errorMessage>
</ValidationRule>